cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)

add_subdirectory(SocketConnection)
add_subdirectory(SocketIO)
add_subdirectory(Requests)
add_subdirectory(NetworkTools)
add_subdirectory(KeyboardInputTools)

add_subdirectory(PlayingCards)
add_subdirectory(Services)
add_subdirectory(DataLayer)
add_subdirectory(BlackjackLogic)
add_subdirectory(BlackjackServer)
add_subdirectory(BlackjackClient)